[project]
name = "bastyn-cli"
version = "0.1.0"
description = "Command-line installer for BASTYN on-premises"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Rooted Logic LDA" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://bastyn.ai"
Source = "https://github.com/RootedLogicLDA/bastyn-cli"

[project.scripts]
bastyn = "bastyn.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bastyn"]
